force-app/main/default/objects/Opportunity/fields/Administrative_Assistant_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Assistant_First_Name__c</fullName>
    <label>Administrative Assistant First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>