force-app/main/default/objects/Opportunity/fields/Administrative_Assistant_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Assistant_Last_Name__c</fullName>
    <label>Administrative Assistant Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>