force-app/main/default/objects/Opportunity/fields/Administrative_Assistant_Phone__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Assistant_Phone__c</fullName>
    <label>Administrative Assistant Phone</label>
    <type>Phone</type>
</CustomField>