force-app/main/default/objects/Opportunity/fields/Budget_Outline__c.field-meta.xml
<CustomField>
    <fullName>Budget_Outline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Budget Outline</label>
    <type>Checkbox</type>
</CustomField>