force-app/main/default/objects/Opportunity/fields/Budget_Template__c.field-meta.xml
<CustomField>
    <fullName>Budget_Template__c</fullName>
    <label>Budget Template</label>
    <type>Url</type>
</CustomField>