force-app/main/default/objects/Opportunity/fields/Character_Concepts_and_Strategies__c.field-meta.xml
<CustomField>
    <fullName>Character_Concepts_and_Strategies__c</fullName>
    <label>Character Concepts and Strategies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>