force-app/main/default/objects/Opportunity/fields/Character_Content__c.field-meta.xml
<CustomField>
    <fullName>Character_Content__c</fullName>
    <label>Character Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>