force-app/main/default/objects/Opportunity/fields/Community_Member__c.field-meta.xml
<CustomField>
    <fullName>Community_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>