force-app/main/default/objects/Opportunity/fields/Contact_for_Approval_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_for_Approval_Email__c</fullName>
    <label>Contact for Approval Email</label>
    <type>Email</type>
</CustomField>