force-app/main/default/objects/Opportunity/fields/Contact_for_Approval_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_for_Approval_Last_Name__c</fullName>
    <label>Contact for Approval Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>