force-app/main/default/objects/Opportunity/fields/Core_Research_Program_Curricular__c.field-meta.xml
<CustomField>
    <fullName>Core_Research_Program_Curricular__c</fullName>
    <label>Core Research, Program, Curricular</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>