force-app/main/default/objects/Opportunity/fields/Course_Description__c.field-meta.xml
<CustomField>
    <fullName>Course_Description__c</fullName>
    <label>Course Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>