force-app/main/default/objects/Opportunity/fields/Course_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Course_Frequency__c</fullName>
    <label>Course Frequency</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>