force-app/main/default/objects/Opportunity/fields/Course_Mission__c.field-meta.xml
<CustomField>
    <fullName>Course_Mission__c</fullName>
    <label>Course Mission</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>