force-app/main/default/objects/Opportunity/fields/Course_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Course_Timeline__c</fullName>
    <label>Course Timeline</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>