force-app/main/default/objects/Opportunity/fields/Curriculum_Vitae__c.field-meta.xml
<CustomField>
    <fullName>Curriculum_Vitae__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Curriculum Vitae</label>
    <type>Checkbox</type>
</CustomField>