force-app/main/default/objects/Opportunity/fields/CV_File__c.field-meta.xml
<CustomField>
    <fullName>CV_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CV File</label>
    <type>Checkbox</type>
</CustomField>