force-app/main/default/objects/Opportunity/fields/Department_Head_Supervisor_Email__c.field-meta.xml
<CustomField>
    <fullName>Department_Head_Supervisor_Email__c</fullName>
    <label>Department Head/Supervisor Email</label>
    <type>Email</type>
</CustomField>