force-app/main/default/objects/Opportunity/fields/Department_Head_Supervisor_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Department_Head_Supervisor_First_Name__c</fullName>
    <label>Department Head/Supervisor First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>