force-app/main/default/objects/Opportunity/fields/Department_Program__c.field-meta.xml
<CustomField>
    <fullName>Department_Program__c</fullName>
    <label>Department/Program</label>
    <length>40</length>
    <type>Text</type>
</CustomField>