force-app/main/default/objects/Opportunity/fields/Description_of_the_Character_Approach__c.field-meta.xml
<CustomField>
    <fullName>Description_of_the_Character_Approach__c</fullName>
    <label>Description of the Character Approach</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>