force-app/main/default/objects/Opportunity/fields/Financial_Contact_City__c.field-meta.xml
<CustomField>
    <fullName>Financial_Contact_City__c</fullName>
    <label>Financial Contact City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>