force-app/main/default/objects/Opportunity/fields/Financial_Contact_Country__c.field-meta.xml
<CustomField>
    <fullName>Financial_Contact_Country__c</fullName>
    <label>Financial Contact Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>