force-app/main/default/objects/Opportunity/fields/Financial_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Financial_Contact_Email__c</fullName>
    <label>Financial Contact Email</label>
    <type>Email</type>
</CustomField>