force-app/main/default/objects/Opportunity/fields/Financial_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Financial_Contact_Last_Name__c</fullName>
    <label>Financial Contact Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>