force-app/main/default/objects/Opportunity/fields/Financial_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Financial_Contact_Phone__c</fullName>
    <label>Financial Contact Phone</label>
    <type>Phone</type>
</CustomField>