force-app/main/default/objects/Opportunity/fields/Financial_Contact_State__c.field-meta.xml
<CustomField>
    <fullName>Financial_Contact_State__c</fullName>
    <label>Financial Contact State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>