force-app/main/default/objects/Opportunity/fields/Financial_Contact_Street__c.field-meta.xml
<CustomField>
    <fullName>Financial_Contact_Street__c</fullName>
    <label>Financial Contact Street</label>
    <length>80</length>
    <type>Text</type>
</CustomField>