force-app/main/default/objects/Opportunity/fields/Financial_Contact_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Financial_Contact_Zipcode__c</fullName>
    <label>Financial Contact Zipcode</label>
    <length>5</length>
    <type>Text</type>
</CustomField>