force-app/main/default/objects/Opportunity/fields/Institution__c.field-meta.xml
<CustomField>
    <fullName>Institution__c</fullName>
    <label>Institution</label>
    <length>80</length>
    <type>Text</type>
</CustomField>