force-app/main/default/objects/Opportunity/fields/Institution_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Institution_Mailing_City__c</fullName>
    <label>Institution Mailing City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>