force-app/main/default/objects/Opportunity/fields/Institution_Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>Institution_Mailing_Country__c</fullName>
    <label>Institution Mailing Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>