force-app/main/default/objects/Opportunity/fields/Institution_Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Institution_Mailing_Street__c</fullName>
    <label>Institution Mailing Street</label>
    <length>80</length>
    <type>Text</type>
</CustomField>