force-app/main/default/objects/Opportunity/fields/Institution_Mailing_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Institution_Mailing_Zipcode__c</fullName>
    <label>Institution Mailing Zipcode</label>
    <length>5</length>
    <type>Text</type>
</CustomField>