force-app/main/default/objects/Opportunity/fields/Institution_Phone__c.field-meta.xml
<CustomField>
    <fullName>Institution_Phone__c</fullName>
    <label>Institution Phone</label>
    <type>Phone</type>
</CustomField>