force-app/main/default/objects/Opportunity/fields/Optional_Appendices__c.field-meta.xml
<CustomField>
    <fullName>Optional_Appendices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optional Appendices</label>
    <type>Checkbox</type>
</CustomField>