force-app/main/default/objects/Opportunity/fields/Other_Information__c.field-meta.xml
<CustomField>
    <fullName>Other_Information__c</fullName>
    <label>Other Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>