force-app/main/default/objects/Opportunity/fields/Principal_Investigator_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Principal_Investigator_Salutation__c</fullName>
    <label>Principal Investigator Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mr</fullName>
            </value>
            <value>
                <fullName>Ms</fullName>
            </value>
            <value>
                <fullName>Mx</fullName>
            </value>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>