force-app/main/default/objects/Opportunity/fields/Project_Abstract__c.field-meta.xml
<CustomField>
    <fullName>Project_Abstract__c</fullName>
    <label>Project Abstract</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>