force-app/main/default/objects/Opportunity/fields/Project_Activities_and_Why_ECI_Support__c.field-meta.xml
<CustomField>
    <fullName>Project_Activities_and_Why_ECI_Support__c</fullName>
    <label>Project Activities and Why ECI Support</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>