force-app/main/default/objects/Opportunity/fields/Project_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Project_Timeline__c</fullName>
    <label>Project Timeline</label>
    <length>80</length>
    <type>Text</type>
</CustomField>