force-app/main/default/objects/Opportunity/fields/Project_Timeline_File__c.field-meta.xml
<CustomField>
    <fullName>Project_Timeline_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Timeline File</label>
    <type>Checkbox</type>
</CustomField>