force-app/main/default/objects/Opportunity/fields/Proposal_Narative__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Narative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proposal Narative</label>
    <type>Checkbox</type>
</CustomField>