force-app/main/default/objects/Opportunity/fields/Proposed_Workshop_Length__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Workshop_Length__c</fullName>
    <label>Proposed Workshop Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>35 minutes</fullName>
            </value>
            <value>
                <fullName>75 minutes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>