force-app/main/default/objects/Opportunity/fields/Signed_Letter_of_Support__c.field-meta.xml
<CustomField>
    <fullName>Signed_Letter_of_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed Letter of Support</label>
    <type>Checkbox</type>
</CustomField>