force-app/main/default/objects/Opportunity/fields/Syllabus_es_File__c.field-meta.xml
<CustomField>
    <fullName>Syllabus_es_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Syllabus(es) File</label>
    <type>Checkbox</type>
</CustomField>