force-app/main/default/objects/Opportunity/fields/Target_Impact_and_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Target_Impact_and_Outcomes__c</fullName>
    <label>Target Impact and Outcomes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>