force-app/main/default/objects/Opportunity/fields/Why_Professional_Developments_Important__c.field-meta.xml
<CustomField>
    <fullName>Why_Professional_Developments_Important__c</fullName>
    <label>Why Professional Developments Important</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>