force-app/main/default/objects/Opportunity/fields/X1st_Submitter__c.field-meta.xml
<CustomField>
    <fullName>X1st_Submitter__c</fullName>
    <label>1st Submitter</label>
    <length>80</length>
    <type>Text</type>
</CustomField>