force-app/main/default/objects/Opportunity/fields/X2nd_Submitter__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Submitter__c</fullName>
    <label>2nd Submitter</label>
    <length>80</length>
    <type>Text</type>
</CustomField>