force-app/main/default/objects/Opportunity/fields/X3rd_Submitter__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Submitter__c</fullName>
    <label>3rd Submitter</label>
    <length>80</length>
    <type>Text</type>
</CustomField>