force-app/main/default/objects/Opportunity/recordTypes/Grant_Application.recordType-meta.xml
<RecordType>
    <fullName>Grant_Application</fullName>
    <active>true</active>
    <businessProcess>Grant Application</businessProcess>
    <label>Grant Application</label>
</RecordType>