force-app/main/default/objects/Opportunity/recordTypes/Workshop_Application.recordType-meta.xml
<RecordType>
    <fullName>Workshop_Application</fullName>
    <active>true</active>
    <businessProcess>Workshop Application</businessProcess>
    <label>Workshop Application</label>
</RecordType>