force-app/main/default/objects/Opportunity/validationRules/Accepted_Type_Values.validationRule-meta.xml
<ValidationRule>
    <fullName>Accepted_Type_Values</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordTypeId = &apos;012D40000013fvXIAQ&apos;,
    NOT(ISPICKVAL(Type, &apos;Capacity-Building&apos;)),
    NOT(ISPICKVAL(Type, &apos;Institutional Impact&apos;)),
    NOT(ISPICKVAL(Type, &apos;Professional Development CLOSED&apos;)),
    NOT(ISPICKVAL(Type, &apos;Teacher-Scholar CLOSED&apos;))
)</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>Not an acceptable value for Type</errorMessage>
</ValidationRule>