force-app/main/default/objects/Opportunity/validationRules/Capacity_Building_Max_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Capacity_Building_Max_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Type, &apos;Capacity-Building&apos;),
    Amount &gt; 50000
)</errorConditionFormula>
    <errorMessage>Maximum amount requested is $50,000 for a Capacity-Building grant</errorMessage>
</ValidationRule>