force-app/main/default/objects/Opportunity/validationRules/Institutional_Impact_Max_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Institutional_Impact_Max_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Type, &apos;Institutional Impact&apos;),
    Amount &gt; 1000000
)</errorConditionFormula>
    <errorMessage>Maximum amount requested is $1,000,000 for an Institutional Impact grant</errorMessage>
</ValidationRule>