force-app/main/default/objects/Opportunity/validationRules/Professional_Development_Max_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Professional_Development_Max_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Type, &apos;Professional Development&apos;),
    Amount &gt; 5000
)</errorConditionFormula>
    <errorMessage>Maximum amount requested is $5,000 for a Professional Development grant</errorMessage>
</ValidationRule>