force-app/main/default/objects/Opportunity/validationRules/Teacher_Scholar_Max_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Teacher_Scholar_Max_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Type, &apos;Teacher-Scholar&apos;),
    Amount &gt; 15000
)</errorConditionFormula>
    <errorMessage>Maximum amount requested is $15,000 for an Teacher-Scholar grant</errorMessage>
</ValidationRule>